fix: fix broken layout on iphones

--- a/css/footerstyle.css
+++ b/css/footerstyle.css
@@ -433,7 +433,7 @@
 	}
 
 	.footer__license--big {
-		position: absolute;
+		display: block;
 		width: 266px;
 		height: 94px;
 		margin-top: 55px;
